--- a/net/GCodeSender.csproj
+++ b/net/GCodeSender.csproj
@@ -11,4 +11,7 @@
     <PackageReference Include="System.IO.Ports" Version="9.0.1" />
   </ItemGroup>
 
+  <PropertyGroup>
+    <PublishAot>true</PublishAot>
+  </PropertyGroup>
 </Project>
